Fix header on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -692,12 +692,11 @@ footer p {
     }
     header .container {
         flex-wrap: wrap;
-        justify-content: center;
         text-align: center;
+        margin-bottom: 15px
     }
     .logo {
         width: 100%;
-        margin-bottom: 15px;
     }
 
     nav ul {
